# service-proxy

./: .gitignore  Cargo.toml  Makefile
cmd/echo-upstream/: main.go
cmd/proxy/: main.go
cmd/quic-bench-client/: stats_test.go
crates/grpc-smoke-client/: Cargo.toml
crates/grpc-smoke-client/src/: main.rs
crates/http3-smoke-client/: Cargo.toml
crates/http3-smoke-client/src/: main.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/src/: lib.rs
crates/quic-smoke-client/: Cargo.toml
crates/quic-smoke-client/src/: main.rs
crates/service-proxy/: Cargo.toml
crates/service-proxy/src/: config.rs  grpc_proxy.rs  main.rs  pprof_server.rs  proxy_http.rs  tokio_metrics_server.rs
crates/service-proxy/src/quic_proxy/: framing.rs  mod.rs  tls.rs
crates/service-proxy/src/upstream/: balancer.rs  dial.rs  mod.rs  pool.rs
deploy/phase0/: docker-compose.yml
deploy/phase1a/: docker-compose.yml
deploy/phase1b/: docker-compose.yml
deploy/phase2a/: docker-compose.yml
deploy/phase2b/: docker-compose.yml
deploy/phase3a/: docker-compose.yml
deploy/phase3b/: docker-compose.yml
deploy/phase5/: docker-compose.yml
docker/proxy/: Dockerfile  Dockerfile.go  Dockerfile.rust
docker/upstream/: Dockerfile  Dockerfile.go
go/: go.mod  go.sum
go/cmd/echo-upstream/: main.go
go/cmd/grpc-smoke-client/: main.go
go/cmd/proxy/: main.go
go/cmd/proxy/http3-smoke-client/: main.go
go/cmd/quic-bench-client/: main.go  scheduler.go  stats.go
go/cmd/quic-smoke-client/: main.go
go/internal/config/: config.go
go/internal/grpcproxy/: server.go
go/internal/grpcproxy/proto/: echo.pb.go  echo_grpc.pb.go
go/internal/proxyhttp/: handler.go  http_handler.go
go/internal/quicproxy/: server.go  tls.go
go/internal/upstream/: balancer.go  balancer_test.go  pool.go
internal/config/: config.go
internal/grpcproxy/: server.go
internal/proxyhttp/: handler.go  http_handler.go
internal/quicproxy/: framing.go  http3server.go  server.go
internal/upstream/: balancer.go  dial.go
proto/: echo.proto
scripts/: fix-docker-udp-buffers.sh  flamegraph-go.sh  flamegraph-rust-offcpu.sh  flamegraph-rust-perf.sh  flamegraph-rust-pprof.sh  flamegraph-rust.sh  gen-proto.sh  install-oha-http3.sh  netem.sh  runqlat-rust.sh  smoke-phase0.sh  smoke-phase1a.sh  smoke-phase1b.sh  smoke-phase2a.sh  smoke-phase2b.sh  smoke-phase3a.sh  smoke-phase3b.sh  tokio-metrics.sh
