[package]
name = "service-proxy"
version.workspace = true
edition.workspace = true

[[bin]]
name = "service-proxy"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
httparse = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
quinn = { workspace = true }
h3 = { workspace = true }
h3-quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
tower = { workspace = true }
proto = { workspace = true }
tokio-stream = "0.1"
# Userspace CPU profiles (SIGPROF), Go-comparable via PPROF_ADDR HTTP endpoints.
# Pair with scripts/flamegraph-rust-pprof.sh; use flamegraph-rust-perf.sh for kernel.
pprof = { version = "0.15", features = ["flamegraph", "prost-codec"] }

